Fix spacing between index.html about content and issue section button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,7 +465,7 @@ footer {
 
     /* home - about */
     #about-container {
-        height: 1010px;
+        height: 1050px;
     }
 
     .mobile-size {
